tests/baselines/reference/funClodule.errors.txt
==== tests/cases/compiler/funClodule.ts (3 errors) ====
    declare function foo();
    declare module foo {
        export function x(): any;
    }
    declare class foo { } // Should error
                  ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    
    
    declare class foo2 { }
    declare module foo2 {
        export function x(): any;
    }
    declare function foo2(); // Should error
                     ~~~~
!!! error TS2300: Duplicate identifier 'foo2'.
    
    
    function foo3() { }
    module foo3 {
         export function x(): any { }
    }
    class foo3 { } // Should error
          ~~~~
!!! error TS2300: Duplicate identifier 'foo3'.